syntax = "proto3";
package v1;

import "google/protobuf/timestamp.proto";

//UserData
message Users {
    int64 id = 1;
    string username = 2;
    string password = 3;
    google.protobuf.Timestamp reminder = 4;
}

//CreateRequest
message CreateRequest {
    string api = 1;

    Users uSers = 2;
}

//CreateResponse
message CreateResponse {
    string api = 1;

    int64 id = 2;
}

//ReadRequest
message ReadRequest{
    string api = 1;

    int64 id = 2;
}

//ReadResponse
message ReadResponse{
    string api = 1;

    Users uSers = 2;
}

//UpdateRequest
message UpdateRequest{
    string api = 1;

    Users uSers = 2;
}

//UpdateResponse
message UpdateResponse{
    string api = 1;

    int64 updated = 2;
}

//DeleteRequest
message DeleteRequest{
    string api = 1;

    int64 id = 2;
}

//DeleteResponse
message DeleteResponse{
    string api = 1;

    int64 deleted = 2;
}

//ReadAllRequest
message ReadAllRequest{
    string api = 1;
}

//ReadAllResponse
message ReadAllResponse{
    string api = 1;


    repeated Users uSerse = 2;
}

// Service to manage list of todo tasks
service UsersService {
   rpc Create(CreateRequest) returns (CreateResponse);

   rpc Read(ReadRequest) returns (ReadResponse);

   rpc Update(UpdateRequest) returns (UpdateResponse);

   rpc Delete(DeleteRequest) returns (DeleteResponse);

   rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}

